# pycpg

./: .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  sdkTestingpycpg.py  tox.ini
.github/workflows/: build.yml  docs.yml  style.yml
docs/: conf.py  index.md  methods.md
docs/methoddocs/: legalhold.md
docs/userguides/: basics.md  gettingstarted.md
src/pycpg/services/: devices.py  legalhold.py  legalholdapiclient.py
tests/clients/settings/: test_device_settings.py
tests/integration/: conftest.py  test_legalhold.py
tests/sdk/: test_sdk.py
tests/services/: test_auth.py  test_devices.py  test_legalhold.py  test_legalholdapiclient.py  test_orgs.py  test_users.py
tests/services/storage/: test_restore.py
tests/settings/: test_settings.py
